# muto

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT.md  CONTRIBUTING.md  README.md  RELEASE_PLAN.md  analysis.md  dashboard-compressed.md  dashboard.md  demo.repos  demo.sh  pyproject.toml  ruff.toml
.github/workflows/: ci-foxy.yaml  ci-humble.yaml  ci-jazzy.yaml  colcon-build.yaml  muto-coverage.yml
config/: device_agent.json  muto-device-agent.service  muto.yaml
docs/: project_overview.md  readme.md
docs/api/: openapi.yaml
docs/developer_guide/: building_from_source.md  debugging_and_testing.md  readme.md  running_from_source.md
docs/examples/: readme.md
docs/frontend/: audit_log.md  backend_responsibilities.md  rollouts.md  vehicle_events.md  vehicle_status.md
docs/reference/: readme.md
docs/reference/agent/: readme.md
docs/reference/composer/: readme.md  stacks.md
docs/samples/mep-0001/: declarative-demo.json  legacy-composable-demo.json  legacy-script-demo.json  native-demo.json  native_turtlesim.launch.py  workspace-demo.json
docs/samples/muto/: deploy_stack.py  sample-composable.json  sample-muto-stack.json
docs/samples/muto/blueprint-demo/gap_follower/gap_follower/: gap_follower.py
docs/samples/muto/blueprint-demo/gap_follower_demo/: README.md  check-status.sh  create-packages.sh
docs/samples/muto/blueprint-demo/gap_follower_demo/fast/: run.sh
docs/samples/muto/blueprint-demo/gap_follower_demo/medium/: run.sh
docs/samples/muto/blueprint-demo/gap_follower_demo/slow/: run.sh
docs/samples/muto/blueprint-demo/gap_follower_demo/stacks/: gap_follower_fast.json  gap_follower_medium.json  gap_follower_slow.json
docs/samples/muto/blueprint-demo/symphony/: docker-compose.yaml
docs/samples/symphony/: DEMO.md  blueprint-archive.json  demo-config.json  instance.json  run-demo.sh  talker-listener.json  target.json
docs/samples/talker-listener/: README.md  create_archive.sh  native_talker_listener.launch.py  run-demo.sh  sample-stack-release.json  talker-listener-declarative.json  talker-listener-json-instance.json  talker-listener-json.json  talker-listener-legacy.json  talker-listener-native.json  talker-listener-workspace.json  talker-listener-xarchive-instance.json  talker-listener-xarchive.json
docs/samples/talker-listener/sample-stack/: README.md  run.sh
docs/samples/talker-listener/sample-stack/src/muto_listener/: setup.py
docs/samples/talker-listener/sample-stack/src/muto_talker/: setup.py
docs/spec/: SPEC.md
docs/user_guide/: quick_start.md  readme.md  running_examples.md  troubleshooting.md
launch/: muto.launch.py
src/daemon/: CMakeLists.txt  package.xml
src/daemon/include/muto_daemon/: actual_state_prober.hpp  desired_state_resolver.hpp  drift_detector.hpp  graph_state_publisher.hpp  muto_daemon_node.hpp
src/daemon/launch/: muto_daemon.launch.py
src/daemon/src/: actual_state_prober.cpp  desired_state_resolver.cpp  drift_detector.cpp  graph_state_publisher.cpp  main.cpp  muto_daemon_node.cpp
src/daemon/test/: test_desired_state_resolver.cpp  test_drift_detector.cpp
src/daemon/test/integration/: test_daemon_observation.py
src/eclipse_muto/: CMakeLists.txt  package.xml
