<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!--
#
# Copyright (c) 2025 Composiv.ai
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0.
#
# SPDX-License-Identifier: EPL-2.0
#
# Contributors:
#   Composiv.ai - initial API and implementation
#
-->

<package format="3">
  <name>muto_daemon</name>
  <version>0.42.0</version>
  <description>Eclipse Muto Daemon - continuous graph observation, drift detection, and state publication for ROS 2 node graphs</description>
  <maintainer email="info@composiv.ai">Composiv</maintainer>
  <license file="LICENSE">EPL-2.0</license>

  <url type="website">https://eclipse.dev/muto/</url>
  <url type="repository">https://github.com/eclipse-muto/muto</url>
  <url type="bugtracker">https://github.com/eclipse-muto/muto/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>muto_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>nlohmann-json-dev</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>demo_nodes_cpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
