<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eclipse_muto</name>
  <version>0.42.0</version>
  <description>Eclipse Muto - adaptive framework and runtime for managing ROS 2 software stacks on autonomous vehicles and edge devices</description>
  <maintainer email="info@composiv.ai">Composiv</maintainer>
  <license file="LICENSE">EPL-2.0</license>

  <url type="website">https://eclipse.dev/muto/</url>
  <url type="repository">https://github.com/eclipse-muto/muto</url>
  <url type="bugtracker">https://github.com/eclipse-muto/muto/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>muto_agent</exec_depend>
  <exec_depend>muto_composer</exec_depend>
  <exec_depend>muto_core</exec_depend>
  <exec_depend>muto_daemon</exec_depend>
  <exec_depend>muto_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
